--- a/style.css
+++ b/style.css
@@ -1,14 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
-
 * {
 	box-sizing: border-box;
 }
 
 body {
-	background-color: #3B3B98;
+	background-image: linear-gradient(to right, rgb(51, 255, 109) , rgb(211, 226, 80));
 	color: #fff;
 	display: flex;
-	font-family: 'Muli', sans-serif;
+	font-family: 'VT323', monospace;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
@@ -23,6 +21,7 @@ p {
 h2 {
 	margin: 10px 0 20px;
 	text-align: center;
+	font-family: 'Press Start 2P', cursive;
 }
 
 input[type=checkbox] {
@@ -30,11 +29,13 @@ input[type=checkbox] {
 }
 
 .container {
-	background-color: #23235B;
+	background-color: #373737;
 	box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.2);
 	padding: 20px;
 	width: 350px;
 	max-width: 100%;
+	border-radius: 6px;
+	box-shadow:  5px 5px 5px rgb(106, 106, 106);
 }
 
 .result-container {
@@ -70,12 +71,14 @@ input[type=checkbox] {
 	cursor: pointer;
 	font-size: 16px;
 	padding: 8px 12px;
-	background-color: #3B3B98;
+	background-color: #1c6a0e;
+	border-radius: 7px;
 }
 
 .btn-large {
 	display: block;
 	width: 100%;
+	font-family: 'Press Start 2P', cursive;
 }
 
 .setting {
@@ -83,6 +86,7 @@ input[type=checkbox] {
 	justify-content: space-between;
 	align-items: center;
 	margin: 15px 0;
+	font-size: x-large;
 }
 
 @media screen and (max-width: 400px) {
